(bug) Remove picturefill script and markup
- Too much maintenance required at this time. Seems to cause issues with IE and full width images.

--- a/css/320andup.css
+++ b/css/320andup.css
@@ -1816,6 +1816,7 @@ figure figcaption {
 }
 .feature-image {
   width: 100%;
+  height: auto;
 }
 .pin-it-button img {
   vertical-align: top;
