--- a/less/elements.less
+++ b/less/elements.less
@@ -68,6 +68,7 @@ figure {
 }
 .feature-image {
 	width: 100%;
+  height: auto;
 }
 // Social Media
 .pin-it-button img {
